# fastapi-rag-lab

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  ci.yml.disabled
docs/decisions/: 001-chunking-strategy.md  002-ingestion-pipeline.md  003-hybrid-retrieval.md  004-query-api-streaming.md  005-evaluation-strategy.md  006-retrieval-benchmarks.md
src/fastapi_rag_lab/api/: app.py  prompt.py
src/fastapi_rag_lab/api/llm/: ollama_client.py
src/fastapi_rag_lab/api/routes/: query.py
src/fastapi_rag_lab/api/schemas/: query.py
src/fastapi_rag_lab/eval/: __init__.py  benchmarks.py  dataset.py  metrics.py  plotting.py  retrieval_metrics.py  runner.py
src/fastapi_rag_lab/ingest/: __main__.py  chunker.py  embedder.py  fetcher.py  manifest.py  pipeline.py  store.py
src/fastapi_rag_lab/retrieval/: dense.py  fusion.py  hybrid.py  reranker.py  sparse.py  types.py
tests/: conftest.py  test_smoke.py
tests/api/: test_query_endpoint.py
tests/eval/: golden_dataset.json  run_benchmarks.py  run_eval.py  test_metrics.py  test_retrieval_metrics.py  test_runner.py
tests/eval/results/: benchmark_20260417T104609Z.json
tests/ingest/: test_chunker.py  test_embedder.py  test_fetcher.py  test_manifest.py  test_pipeline.py  test_store.py
tests/retrieval/: test_hybrid_retrieval.py
