[project]
name = "fastapi-rag-lab"
version = "0.1.0"
description = "RAG system over the FastAPI documentation"
authors = [{name = "Eduardo García Tímermans"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "qdrant-client",
    "httpx",
    "langfuse",
    "markdown-it-py",
    "tiktoken",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.0",
    "ragas>=0.4.3",
    "datasets>=4.8.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_rag_lab"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: requires network access",
    "ollama: requires Ollama running on host",
    "qdrant: requires Qdrant running in Docker",
    "integration: full end-to-end pipeline test",
]
